--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,88 @@
-body {
-    background-color: darkorchid;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Pacifico&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+:root{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(to top, #eeeeee, #ffffff);
+    /* font-family: 'Montserrat Alternates', sans-serif;
+    font-family: 'Pacifico', cursive; */
+}
+.main-login{
+    display: grid;
+    grid-template-columns: 0px 1fr;
+    width: 100%;
+    height: 100vh;
+}
+.main-login .figure-login > img{
+    display: none;
+}
+.main-login .figure-login{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.img-login .userPic{
+    width: 100px;
+    height: 100px;
+}
+.main-login >.col{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.col >.text-welcome{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+form .form{
+    font-family: 'Montserrat Alternates', sans-serif;
+    color: #0091ad;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+form .form .label{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 20% 80%;
+}
+form .form .label >.flex{
+    position: relative;
+}
+form .typeLog > figure >img{
+    width: 30px;
+    height: 30px;
+}
+.main-login .logo{
+    font-family: 'Pacifico', cursive;
+    font-size: 25px;
+    color: #212529;
+    font-weight: bold;
+    text-align: center;
+}
+.main-login .text-logo{
+    color: #0091ad;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Montserrat Alternates', sans-serif;
+    text-align: center;
+}
+
+
+@media screen and (min-width: 1024px){
+    .main-login{
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 20px;
+    }
+    .main-login .figure-login > img{
+        display: block;
+    }
 }
