--- a/src/style.css
+++ b/src/style.css
@@ -604,7 +604,7 @@ form .typeLog > div > button > img {
   background: white;
   position: relative;
   top: 15%;
-  min-width: 250px;
+  width: 39%;
   height: 77%;
   border-radius: 15px;
   margin: auto;
