--- a/src/style.css
+++ b/src/style.css
@@ -628,6 +628,20 @@ form .typeLog > div > button > img {
 h2{
 text-align: -webkit-center
 }
+
+.contentGeneral{
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+.contentArea{
+  display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+}
 @media screen and (min-width: 1024px) {
   .container-change {
     grid-template-columns: repeat(2, 1fr);
