Mejorando los post, mejorando lógica

--- a/src/style.css
+++ b/src/style.css
@@ -594,7 +594,7 @@ form .typeLog > div > button > img {
   padding: 15px;
   transition: .5s;
 }
-.posting.show >.show-comments{
+.show-comments.show{
   display: none;
 }
 .show-comments > .area-cm{
