--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,7 @@ a {
   align-items: center;
   justify-content: center;
 }
+
 form .form {
   font-family: 'Poppins', sans-serif;
   color: #5c4d7d;
@@ -683,6 +684,35 @@ form .typeLog > div > button > img {
     text-align: center;
     font-size: 15px;
     color: #212529;
+}
+#modal-window > .contentGeneralDelete{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.buttonconfirm{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.contentGeneralDelete > .buttonconfirm > button{
+  padding: 9px 15px;
+  width: 150px;
+  border-radius: 50px;
+  border: none;
+  background: linear-gradient(to top, #723C70, #892B64);
+  color: #ffffff;
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+  box-shadow: 5px 5px 5px #c2e2e9;
+}
+.contentGeneralDelete > h5{
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: #2a2e31;
 }
 #modal-window > .contentGeneral{
   display: flex;
