--- a/src/style.css
+++ b/src/style.css
@@ -788,17 +788,22 @@ form .typeLog > div > button:hover {
   color: #2a2e31;
 }
 footer{
-  width: 100%;
-  background-color: #2a2e31;
-  color: white;
-  display: flex;
-  padding: 20px;
-  font-size: 18px;
-  justify-content: center;
-  align-content: space-between;
+  flex-direction: column;
+    width: 100%;
+    background-color: #2a2e31;
+    color: white;
+    display: flex;
+    padding: 19px;
+    font-size: 14px;
+    align-items: center;
 }
 footer a{
   color: white;
+  margin-bottom: 3px;
+  font-family: "pacifico", cursive;
+}
+footer a:hover{
+  color: #1a85a0;
 }
 @keyframes modal-animate {
   0% {
@@ -861,8 +866,8 @@ footer a{
   }
   .best-post > h3{
     padding-bottom: 5px;
-    background-color: white;
-    color: rgb(65, 63, 63);
+    background: linear-gradient(to top, #A01A58, #892B64);
+    color: rgb(255, 255, 255);
     line-height: 35px;
     font-size: 14px;
     text-align: center;
@@ -895,5 +900,9 @@ footer a{
   }
   .grid > .search > textarea{
     border-radius: 20px;
+  }
+  footer{
+    flex-direction: row;
+    justify-content: space-around;
   }
 }
